# whatidid

./: .gitignore  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: publish.yml  whatidid-weekly.yml
action/: action.yml
landing/: index.html
src/whatidid/: __init__.py  _engine.py  cli.py  core.py
